--- a/public/scss/_general.scss
+++ b/public/scss/_general.scss
@@ -16,6 +16,9 @@ html, body {
     line-height: 1;
     outline: none;
     box-shadow: none;
+    vertical-align: middle;
+    color: #777;
+    font-size:14px;
 }
 
 input[type="text"],
@@ -34,6 +37,13 @@ textarea {
     height: 29px;
     color: #999;
     width: 100%;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select {
+    height: 32px;
 }
 
 a {
@@ -107,6 +117,12 @@ a {
             line-height: 25px;
             color: #FFF;
         }
+        .item__user-comments{
+
+        }
+        .item-actions{
+            flex: 0 0 40px;
+        }
         &.active {
             &:before {
                 background: #92f3ff;
@@ -118,6 +134,7 @@ a {
                 bottom: 0;
                 z-index: 0;
                 opacity: 0.1;
+                pointer-events: none;
             }
         }
     }
